@@ -1,6 +1,6 @@
 display_name = "txJSON-RPC"
 library_name = "txjsonrpc"
-version = "0.3"
+version = "0.3.1"
 author = "Duncan McGreggor"
 author_email = "oubiwann@adytum.us"
 license = "BSD, GPL"
